# referendum2026

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
sondaggi/: __init__.py  __main__.py  data.py  fetch.py  loess.py  plot.py
tests/: conftest.py  test_data.py  test_fetch.py  test_loess.py  test_plot.py
tests/data/: clean_plot_minimal.csv  clean_same_date.csv  clean_three_rows.csv  raw_two_rows.csv
